Version 0.10.8
--------------

* Update slack alert to 0.8.1
  - fixes names not linking
  - only shows the acknowledge button if "SLACK_INTERACTIVE_MESSAGES" is set
    - (The feature only works if set up correctly on the slack end)
* Update to django 1.11 (with working django-polymorphic this time)

Version 0.10.7
--------------

* Update slack alert plugin
  - Now shows an "acknowledge" button within slack
* Fix alert tests not triggering if:
  - A user had acknowledged working on the service
  - A legitimate alert had been sent recently
* Add support for GitHub OAuth logins
  - See http://cabotapp.com/use/users.html

Version 0.10.6
--------------

* Fix plugin urls being overridden by plugin settings urls
  - This fixes e.g. the twilio callback url not working
* Fix profile settings sidebar links not working

Version 0.10.5
--------------

* Fix bug which caused status graphs to sometimes not render
* Fix issue with complex recurring calendar - `'vDDDLists' object is not iterable`
* Fix css regression in logo/title

Version 0.10.4
--------------

* Fix basic auth passwords getting reset when editing checks
* Fix plugin alert tests alerting the current duty officer
  - They should now always alert only the user that runs the test

Version 0.10.3
--------------

* Add plugin settings views with the ability to test alerts.
* Allow user filter for LDAP to be configured
  - Set the AUTH_LDAP_USER_FILTER setting to change it (defaults to "(uid=%(user)s)")
* Update cabot-alert-hipchat plugin to 2.0.2
  - Fixes bug when both HIPCHAT_URL and HIPCHAT_DOMAIN were set

Version 0.10.2
--------------

* Update cabot-alert-hipchat plugin to 2.0.1
  - Supports Hipchat API v2
  - If HIPCHAT_URL is set, it will use the old v1 api
  - Use HIPCHAT_DOMAIN for custom hipchat v2 deployments
* Add interactive api docs (using djangorestframework 3.6) at /docs

Version 0.10.1
--------------

* [BUGFIX] Update cabot_alert_twilio to 1.3.1
  - 1.3.0 was still broken on django 1.10
