@@ -1,3 +1,8 @@
+master
+------
+
+* Remove deprecated Fabfile and Shell scripts
+
 Version 0.10.8
 --------------
 
